<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/fragment_create_meetings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateMeetingActivity">



        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="@+id/fragment_create_meetings"
            app:layout_constraintStart_toStartOf="@id/fragment_create_meetings"
            android:backgroundTint="@color/white"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:text="Sujet :"
            app:layout_constraintTop_toTopOf="@id/back_btn"
            app:layout_constraintStart_toStartOf="@+id/fragment_create_meetings"
            android:layout_marginTop="70dp"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintStart_toEndOf="@+id/subject"
            app:layout_constraintTop_toTopOf="@id/fragment_create_meetings"
            android:layout_marginTop="70dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_subject"
            android:background="@color/black"
            android:layout_marginTop="15dp"
            android:layout_margin="15dp"
            android:layout_height="1dp" />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            app:layout_constraintStart_toStartOf="@+id/fragment_create_meetings"
            android:padding="10dp"
            android:text="Date :"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line2"
            app:layout_constraintStart_toEndOf="@id/date"
            android:text="Selectioner une date"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:background="@color/black"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="@id/fragment_create_meetings"/>

        <TextView
            android:id="@+id/heure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line3"
            android:text="Heure : "
            android:padding="10dp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/fragment_create_meetings"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/btn_heure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line3"
            app:layout_constraintStart_toEndOf="@id/date"
            android:layout_marginStart="20dp"
            android:text="Selectioner une heure"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />



        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/heure"
            android:background="@color/black"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="@id/fragment_create_meetings"/>

        <TextView
            android:id="@+id/participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line4"
            android:text="Participants :"
            app:layout_constraintStart_toStartOf="@id/fragment_create_meetings"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/btn_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="Ajouter un participant"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/participants"
            app:layout_constraintTop_toBottomOf="@id/line4" />

        <TextView
            android:id="@+id/list_contributor_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="5dp"
            android:text="toto@lamzone.com"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginStart="70dp"
            app:layout_constraintStart_toStartOf="@id/fragment_create_meetings"
            app:layout_constraintTop_toBottomOf="@id/btn_participants" />

        <View
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/list_contributor_tv"
            android:background="@color/black"
            android:layout_margin="15dp" />

        <TextView
            android:id="@+id/salle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line5"
            app:layout_constraintStart_toStartOf="@id/fragment_create_meetings"
            android:text="Salle :"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginStart="20dp"/>

        <Spinner
            android:id="@+id/room_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toBottomOf="@+id/line5"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            />

        <View
            android:id="@+id/line6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/salle"
            android:background="@color/black"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/create_meeting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line6"
            app:layout_constraintStart_toStartOf="@id/fragment_create_meetings"
            android:textColor="@color/white"
            android:layout_margin="30dp"
            android:text="Créer votre réunion"
            android:backgroundTint="@color/purple_500"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

