<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/contributor_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/add_contributor_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ajouter d'autres participants"></androidx.appcompat.widget.AppCompatCheckBox>

</LinearLayout>