...
        app:layout_constraintTop_toBottomOf="@id/activity_main_toolbar"
        android:layout_marginTop="60dp"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/red"
        android:clickable="true"
...
